tag categories styling to flex wrap from grid to prevent uneven spacing between

--- a/frontend/src/components/EditTag.css
+++ b/frontend/src/components/EditTag.css
@@ -4,8 +4,8 @@
     gap: 20px;
 }
 #categories_grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     padding-inline-start: 0;
     gap: 10px;
 }
