--- a/frontend/src/components/NewTag.css
+++ b/frontend/src/components/NewTag.css
@@ -1,6 +1,6 @@
 #categories_grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     padding-inline-start: 0;
     gap: 10px;
 }
