--- a/frontend/src/components/TagCategory.css
+++ b/frontend/src/components/TagCategory.css
@@ -1,8 +1,6 @@
 .category {
-    display: flex;
-    gap: 10px;
     list-style: none;
-    margin: 0 auto;
+    display: flex;
     padding: 0 5px;
     border-radius: 2px;
     background-color: mediumseagreen;
